<resources>
    <string name="app_name">nyNoteBook</string>

    <string name="font_size">Size</string>
    <string name="font_color">Text Color</string>
    <string name="font_spacing">Exact Spacing</string>
    <string name="font_none">none</string>
    <string name="font_highlight_color">Highlight</string>
    <string name="font_default_text">AaBbCcDd</string>
    <string name="font_style_normal">Normal</string>
    <string name="font_style_heading_1">Heading 1</string>
    <string name="font_style_heading_2">Heading 2</string>
    <string name="font_style_heading_3">Heading 3</string>
    <string name="font_insert">Insert</string>
    <string name="edit_hyperlink">Edit Hyperlink</string>
    <string name="ok">OK</string>
    <string name="address">Address:</string>
    <string name="text_to_display">Text to display:</string>

    <string name="edit_table">Edit Table</string>
    <string name="heading_4">Heading 4</string>
    <string name="heading_5">Heading 5</string>
    <string name="heading_6">Heading 6</string>
    <string name="please_select_picture_src">选择图像来源</string>
    <string name="please_select_video_src">选择视频来源</string>
    <string name="from_album">相册</string>
    <string name="take_photo">拍照</string>
    <string name="by_camera">摄像</string>
    <string name="please_wait">请稍等</string>
    <string name="sure">确定</string>

    <string name="open_permission">Open permission</string>
    <string name="video_record_des">To record a video, you need to give the camera and microphone access.</string>
    <string name="recording">RECORD</string>

    <!-- memento-->
    <string name="menu">menu</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit_message">Back again to exit App</string>
    <string name="exit_search">Back again to exit search</string>
    <string name="new_category">New category</string>
    <string name="empty">empty</string>
    <string name="no_categories">No categories found!</string>
    <string name="no_notes">No notes found!</string>
    <string name="no_categories_desc">Create a new category to start\ntaking notes</string>
    <string name="no_notes_desc">Start taking notes by creating\na new one</string>
    <string name="no_notes_hint">No notes</string>
    <string name="one_note">1 note</string>
    <string name="counter_note">%1$d notes</string>
    <string name="title">Title</string>
    <string name="choose_a_color">Choose a color:</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="theme">theme</string>
    <string name="edit_category">Edit category</string>
    <string name="edit">Edit</string>
    <string name="undo">Undo</string>
    <string name="back">back</string>
    <string name="new_note">New note</string>
    <string name="tool">tool</string>
    <string name="start_drawing">Start drawing</string>
    <string name="permission">Permission</string>
    <string name="storage_permission">Memento needs to access your external storage to store data.</string>
    <string name="request">Request</string>
    <string name="permission_error">Permission not granted</string>
    <string name="permission_error_desc">Memento might work incorrectly without permission to access the external storage.</string>
    <string name="continue_anyway">Continue anyway</string>
    <string name="permission_granted">Permission granted</string>
    <string name="backup">Backup data</string>
    <string name="restore">Restore data</string>
    <string name="new_folder">New folder</string>
    <string name="choose">Choose</string>
    <string name="required">This field is required</string>
    <string name="icon">icon</string>
    <string name="no_mounted_sd">No SD-Card was found</string>
    <string name="backup_saved">Backup data were saved at %1$s</string>
    <string name="backup_error">Backup error</string>
    <string name="data_restored">Back data were successfully restored.</string>
    <string name="restore_error">Restore error</string>
    <string name="not_implemented">This section has not been implemented for the beta version.</string>
    <string name="about_desc">A simple note taking app</string>
    <string name="date">Date</string>
    <string name="keywords">Keyword</string>
    <string name="category">Category</string>
    <string name="remark">Remark</string>
    <string name="reference">Reference</string>
    <string name="please_draw_a_gesture">Please draw a gesture</string>
    <string name="save_as_back">Save as back</string>
    <string name="save_as_refresh">Save as refresh</string>
    <string name="save_as_download">Save as download</string>
    <string name="save_as_forward">Save as forward</string>

    <!--TxtEditor-->
    <string name="txt_editor">nyTextEditor</string>
    <string name="neu">New</string>

    <string name="view">View</string>
    <string name="open">Open file…</string>
    <string name="save">Save</string>
    <string name="storage">Storage</string>
    <string name="openRecent">Open recent</string>
    <string name="clearList">Clear list</string>
    <string name="findAll">Find all…</string>
    <string name="saveAs">Save as…</string>
    <string name="viewMarkdown">View markdown…</string>
    <string name="viewFile">View files</string>
    <string name="autoSave">Auto save</string>
    <string name="wrap">Word wrap</string>
    <string name="suggest">Suggestions</string>
    <string name="highlight">Highlight syntax</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="black">Black</string>
    <string name="retro">Retro</string>
    <string name="size">Text size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="typeface">Typeface</string>
    <string name="mono">Monospace</string>
    <string name="normal">Proportional</string>

    <!--
        Note for translators: You don't need to translate all these
        translation credits below. Just the version, copyright, credit
        for your translation and the licence. Also add your translation
        credit here.
    -->
    <string name="version" formatted="false"><a href="https://github.com/billthefarmer/editor/releases/latest">%s</a>\n\nBuilt %s\n\nCopyright \u00A9 2017 <a href="https://github.com/billthefarmer">Bill Farmer</a>\n\nFrench translation by <a href="https://github.com/milouse">Étienne Deparis</a>, German translation by <a href="https://github.com/Markus00000">Markus Weimar</a> and <a href="https://github.com/AlexanderRitter02">Alexander Ritter</a>, Italian translation by <a href="https://github.com/airon90">Michael Moroni</a>, Polish translation by <a href="https://github.com/evo16">Evo</a>, Greek translation by <a href="https://github.com/nikoss">nikoss</a>, Spanish translation by <a href="https://github.com/foxneo">Miguel Caceres</a>, Simplified Chinese translation by <a href="https://github.com/ludoux">Lu Chang (ludoux)</a>, Dutch translation by <a href="https://github.com/Vistaus">Heimen Stoffels (vistaus)</a>, Russian translation by <a href="https://github.com/bboa">Igor Nedoboy</a>, Latvian translation by <a href="https://github.com/rhssk">Rihards Skuja</a>, Icelandic translation by <a href="">Sveinn í Felli</a>, Portuguese translation by <a href="https://github.com/Andre-Gloria" >André Glória</a>, Chinese (Taiwan) translation by <a href="https://github.com/cges30901">cges30901</a>, Turkish translation by <a href="https://github.com/yasarciv67">Yaşar Çiv</a>, Brazilian Portuguese translation by <a href="https://github.com/aevw">aevw</a>, Sorani Kurdish translation by <a href="https://github.com/rawandsaeed">Rawand Saeed</a>, Persian (Farsi) translation by <a href="https://github.com/eshagh79">Eshagh</a>\n\nLicence <a href="https://www.gnu.org/licenses/gpl.txt">GNU GPLv3</a>
 </string>

    <string name="tooLarge">Too large %s</string>
    <string name="choosename">Choose a file name</string>
    <string name="loading">Loading…</string>

    <string name="modified">
    You have unsaved changes. Do you want to save your changes?
  </string>

    <string name="changedReload">
    This file has changed, do you want to reload it?
  </string>

    <string name="changedOverwrite">
    This file has changed, do you want to overwrite it?
  </string>

    <string name="reload">Reload</string>
    <string name="overwrite">Overwrite</string>
    <string name="discard">Discard</string>

    <string name="open_video_failed">Failed to open video url: %s !</string>
    <string name="gesture_edit">Gesture Edit</string>
    <string name="free_draw">Free Draw</string>
    <string name="json_viewer">Json Viewer</string>

    <string name="find">Find</string>
    <string name="findkey">To find: </string>
    <string name="replacekey">All replaced with: </string>
    <string name="findonly">Find Only</string>
    <string name="replaceall">Replace All</string>

    <string name="default_key">Default Key</string>
    <string name="new_key">Special Key</string>

    <string name="Jsontodb">Json to Db</string>
    <string name="synchronize">Db Synchronize</string>
    <string name="synchronize1">Select first database</string>
    <string name="synchronize2">Select second database</string>
</resources>
