<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/top_json"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="9">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <EditText
                android:id="@+id/editor_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:textColor="@color/main_text"
                android:textColorHint="@color/hint_text"
                android:textSize="@dimen/medium_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <EditText
                android:id="@+id/editor_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/date"
                android:textColor="@color/main_text"
                android:textColorHint="@color/hint_text"
                android:textSize="@dimen/medium_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <EditText
                android:id="@+id/txt_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/remark"
                android:text=""
                android:textColor="@color/main_text"
                android:textColorHint="@color/hint_text"
                android:textSize="@dimen/medium_text" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cmd_keywords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginStart="5dp"
            android:text="@string/keywords"
            android:textSize="18sp"
            android:textColor="?attr/colorPrimary" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <com.nanyang.richeditor.editor.NyDragLinearLayout
                android:id="@+id/editor_keywords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal" />

        </HorizontalScrollView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginEnd="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cmd_reference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:text="@string/reference"
            android:textSize="18sp"
            android:textColor="?attr/colorPrimary" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <com.nanyang.richeditor.editor.NyDragLinearLayout
                android:id="@+id/editor_reference"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal" />
        </HorizontalScrollView>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/gray"/>
</LinearLayout>